Use JDK I/O methods where possible and remove Apache Commons IO. Use Object[]::new when calling toArray().